--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,7 +4,7 @@
 {{ range .Site.Menus.main }}
   {{ $p := .Page }}
   {{ range $p.Translations}}
-    <li>{{ .Title }}, {{ .Summary }}</li>
+    <li>{{ .Title }}, {{ .Description }}, {{ .Summary }}</li>
   {{ end }}
 {{ end }}
 </ul>
